# Frost-Days

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
frost_days/: __init__.py  cli.py  communes.py  config.py  download.py  frost.py  geo.py  meteo.py  viz.py
notebooks/: 01_exploration_frost_days.ipynb
scripts/: prefetch.py  verify_against_export.py
tests/: test_communes.py  test_frost.py  test_geo.py
