[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frost-days"
version = "0.1.0"
description = "Calcul du nombre de jours de gel par commune à partir des données Météo-France (open data)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Eliott" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pyarrow>=12.0",
    "requests>=2.28",
    "plotly>=5.15",
    "streamlit>=1.30",
]

[project.scripts]
frost-days = "frost_days.cli:main"

[tool.setuptools]
packages = ["frost_days"]
